# neovad

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  HF_MODEL_CARD.md
src/neovad/: cli.py  config.py  livekit.py
src/neovad/bench/: ablation.py  accuracy.py  latency.py
src/neovad/frontend/: mel.py
src/neovad/models/: backbone.py  vad.py
src/neovad/nn/: __init__.py  attention.py  convmixer.py  deltanet.py  head.py  linear_rnn.py  mamba.py  mixer.py  scan.py  specaug.py
src/neovad/train/: lit.py  media.py
src/neovad/weights/: mamba2.pt
tests/: test_accuracy.py  test_config.py  test_livekit.py  test_model.py  test_streaming.py
